# hhi_ecuador

./: .gitignore  AGENTS.md  Makefile  README.md  _quarto.yml  environment.yml  pyproject.toml  requirements.txt
00_GOBIERNO/: bitacora_decisiones.md  repo_gobernanza.md  roadmap_publicacion.md
04_RESULTADOS/: README.md
06_JOURNAL_RADAR/: anti_rejection_checklist.md  journal_radar_template.csv  mlaj_target_journal.md
07_SUBMISSION/: cover_letter_template.md  declarations_template.md  highlights_template.md
08_DASHBOARD_ASTRO/: astro.config.mjs  package-lock.json  package.json
09_REPORTS_QUARTO/: replication_report.qmd
10_SLIDES/: defense_slides.qmd
11_PANDOC/: export_commands.md
13_CONFERENCE_RADAR/: conference_radar_template.csv
14_CITATION_ENGINE/: citation_matrix.csv  references.bib
15_AGENTS/: agents_registry.md
16_PROMPTS/: research_workflow_prompt.md
17_AUTOMATION/: README.md  run_pipeline.sh
18_COMMON_PROTOCOLS/: no_fabrication_protocol.md
19_POLICY_BRIEF/: policy_brief.md
20_AI_EXPOSURE_LINK/: README.md
docs/: methodological_note.md
notebooks/: 01_replica_hhi_dea.ipynb
paper/: references.bib  replication_report.docx  replication_report.html  replication_report.qmd
prompts/: CODEX_PROMPT.md
src/: build_dea_dataset.py  build_ecuador_sector_metrics.py  build_publication_tables.py  compare_hhi.py  config.py  dea_bootstrap.py  dea_ccr.py  download_kapsarc.py  ecuador_dea.py  ecuador_hhi.py  ecuador_panel_dea.py  ecuador_sector_dea.py  fetch_wdi.py  hhi.py  run_dea_analysis.py  visualize.py
tasks/: ROADMAP.md
tests/: test_dea.py  (+1 more)
(+39 files in other folders)
